[package]
name = "rustcap"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
windows-capture = "1.0.51"
anyhow = "1.0"
env_logger = "0.9"
ctrlc = "3.2"
ecal = "0.2.0"
prost = "0.11"
log = "0.4"
clap = { version = "3.2.23", features = ["derive"] }

[build-dependencies]
prost-build = "0.11.8"
protoc-rust = "2"